--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/pizzeria?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=123Huellita$
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
