Agrego propiedad para que se muestre en consola info. relevante de spring secutiry

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=123Huellita$
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
+
+# Con esto podemos tener info relevante sobre spring security
+logging.level.org.springframework.security.web.*=debug
